--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,15 @@
 
     <body>
         <a href="buscar">Buscar</a>
+        <a href="insertar">insertar</a>
+        <br>
+        <br>
         <table border="1" id="table_contactos">
             <thead id="thead_contactos">
                 <th>Email</th>
                 <th>Nombre</th>
                 <th>Teléfono</th>
+                <th>Opciones</th>
             </thead>
             <tbody id="tbody_contactos">
             </tbody>
