--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <a href="buscar">Buscar</a>
-        <a href="insertar">insertar</a>
+        <a href="insertar">Insertar</a>
         <br>
         <br>
         <table border="1" id="table_contactos">
