--- a/templates/ver.html
+++ b/templates/ver.html
@@ -15,7 +15,7 @@
         <tbody id="tbody_contactos">
         </tbody>
     </table>
-    <button onclick="cancelar()">Cancelar</button>
+    <button onclick="cancelar()">Volver</button>
     <script>
         document.body.onload = getContacto();
         function cancelar() {    
