--- a/templates/insertar.html
+++ b/templates/insertar.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Inserir contacto</title>
+    <title>Insertar contacto</title>
     <script type="text/javascript" src="../static/js/get_all.js"></script>
     <script type="text/javascript" src="../static/js/post.js"></script>
 </head>
 <body>
-    <h1>Inserir contacto</h1>
+    <h1>Insertar Contacto</h1>
     <label for="text">Nombre</label>
     <br>
     <input type="text" id="nombreInput" placeholder="Ingrese el Nombre">
