--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <h1>Contactos</h1>
         <a href="buscar">Buscar</a>
         <a href="insertar">Insertar</a>
         <br>
