--- a/templates/borrar.html
+++ b/templates/borrar.html
@@ -2,21 +2,26 @@
 <html lang="es">
 <head>
     <title>Ver Contacto</title>
+    <link rel="stylesheet" type="text/css" href="../styles/borrar.css">
     <script type="text/javascript" src="../static/js/delete.js"></script>
 </head>
 
 <body>
-    <table border="1" id="table_contactos">
-        <thead id="thead_contactos">
-            <th>Email</th>
-            <th>Nombre</th>
-            <th>Teléfono</th>
-        </thead>
-        <tbody id="tbody_contactos">
-        </tbody>
-    </table>
-    <button onclick="deleteContacto()">Borrar</button>
-    <button onclick="cancelar()">Cancelar</button>
+    <div class="table-container ">
+        <table border="1" id="table_contactos" class="datagrid">
+            <thead id="thead_contactos">
+                <th>Email</th>
+                <th>Nombre</th>
+                <th>Teléfono</th>
+            </thead>
+            <tbody id="tbody_contactos">
+            </tbody>
+        </table>
+        <div>
+            <button onclick="deleteContacto()" class="button">Borrar</button>
+            <button onclick="cancelar()" class="button">Cancelar</button>
+        </div>
+    </div>
     <script>
         document.body.onload = getContacto();
         function cancelar() {    
