--- a/templates/ver.html
+++ b/templates/ver.html
@@ -2,20 +2,26 @@
 <html lang="es">
 <head>
     <title>Ver Contacto</title>
+    <link rel="stylesheet" type="text/css" href="../styles/ver.css">
     <script type="text/javascript" src="../static/js/ver.js"></script>
 </head>
 
 <body>
-    <table border="1" id="table_contactos">
-        <thead id="thead_contactos">
-            <th>Email</th>
-            <th>Nombre</th>
-            <th>Teléfono</th>
-        </thead>
-        <tbody id="tbody_contactos">
-        </tbody>
-    </table>
-    <button onclick="cancelar()">Volver</button>
+    <h1>Ver Contacto</h1>
+    <div class="center-content">
+        <div class="table-container">
+            <table border="1" id="table_contactos" class="datagrid">
+                <thead id="thead_contactos">
+                    <th>Email</th>
+                    <th>Nombre</th>
+                    <th>Teléfono</th>
+                </thead>
+                <tbody id="tbody_contactos">
+                </tbody>
+            </table>
+        </div>
+        <button onclick="cancelar()" class="button">Volver</button>
+    </div>
     <script>
         document.body.onload = getContacto();
         function cancelar() {    
