--- a/templates/borrar.html
+++ b/templates/borrar.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <title>Ver Contacto</title>
-    <link rel="stylesheet" type="text/css" href="../styles/borrar.css">
+    <link rel="stylesheet" type="text/css" href="borrar.css">
     <script type="text/javascript" src="../static/js/delete.js"></script>
 </head>
 
