--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <title>Contactos</title>
-        <link rel="stylesheet" type="text/css" href="../styles/tablas.css">
+        <link rel="stylesheet" href="tablas.css">
         <script type="text/javascript" src="../static/js/get_all.js"></script>
     </head>
 
