--- a/templates/insertar.html
+++ b/templates/insertar.html
@@ -3,7 +3,7 @@
 <head>
     <title>Insertar contacto</title>
     <script type="text/javascript" src="../static/js/get_all.js"></script>
-    <link rel="stylesheet" type="text/css" href="../styles/insertar.css">
+    <link rel="stylesheet" type="text/css" href="insertar.css">
     <script type="text/javascript" src="../static/js/post.js"></script>
 </head>
 <body>
