--- a/templates/ver.html
+++ b/templates/ver.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <title>Ver Contacto</title>
-    <link rel="stylesheet" type="text/css" href="../styles/ver.css">
+    <link rel="stylesheet" type="text/css" href="ver.css">
     <script type="text/javascript" src="../static/js/ver.js"></script>
 </head>
 
