--- a/templates/actualizar.html
+++ b/templates/actualizar.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <title>Actualizar Contacto</title>
-    <link rel="stylesheet" type="text/css" href="actualizar.css">
+    <link rel="stylesheet" href="../static/js/css/actualizar.css">
     <script type="text/javascript" src="../static/js/editar.js"></script>
 </head>
 
