--- a/templates/borrar.html
+++ b/templates/borrar.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
     <title>Ver Contacto</title>
-    <link rel="stylesheet" type="text/css" href="borrar.css">
+    <link rel="stylesheet" href="../static/js/css/borrar.css">
     <script type="text/javascript" src="../static/js/delete.js"></script>
 </head>
 
 <body>
     <div class="table-container ">
-        <table border="1" id="table_contactos" class="datagrid">
+        <table id="table_contactos" class="datagrid">
             <thead id="thead_contactos">
                 <th>Email</th>
                 <th>Nombre</th>
