--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <title>Buscar contacto</title>
-    <link rel="stylesheet" type="text/css" href="buscar.css">
+    <link rel="stylesheet" href="../static/js/css/buscar.css">
     <script type="text/javascript" src="../static/js/get_all.js"></script>
 </head>
 <body>
