--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -11,7 +11,7 @@
     <input type="text" id="emailInput" class="search-input" placeholder="Ingrese el correo electrónico">
     <button onclick="searchContact()" class="button">Buscar</button>
     <div class="table-container">
-            <h2>Resultados</h2>
+        <h2>Resultados</h2>
         <table class="datagrid">
             <thead>
                 <tr>
@@ -25,7 +25,7 @@
             </tbody>
         </table>
     </div>
-    <button onclick="cancelar()" class="button">Volver</button>
+    <button onclick="cancelar()" class="button1">Volver</button>
     <script>
         function cancelar() {
             window.location.href = "/";
