--- a/templates/ver.html
+++ b/templates/ver.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Ver Contacto</title>
     <link rel="stylesheet" href="../static/js/css/ver.css">
@@ -24,9 +25,11 @@
     </div>
     <script>
         document.body.onload = getContacto();
-        function cancelar() {    
-            window.location.href = "/"; 
+
+        function cancelar() {
+            window.location.href = "/inicio";
         }
     </script>
 </body>
+
 </html>
